--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/krisyupher/yargs-Practice-#readme",
   "dependencies": {
     "colors": "^1.4.0",
-    "inquirer": "^8.1.1"
+    "inquirer": "^8.1.1",
+    "uuid": "^8.3.2"
   }
 }
